[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/script_projectile.gd" type="Script" id=1]
[ext_resource path="res://sources/images/sprite_blue_ball/sprite_big_blue1.png" type="Texture" id=2]
[ext_resource path="res://sources/images/sprite_blue_ball/sprite_big_blue2.png" type="Texture" id=3]
[ext_resource path="res://sources/images/sprite_blue_ball/sprite_big_blue3.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Projectile" type="Area2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.6792, 0, 0, 2.73023, 0.627883, -1.82756 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
speed = 50
deathAnimationName = "enter name"
continuousAnimationName = "enter name"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "default"
frame = 2
playing = true

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 15.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.627883, -1.82756 )
transform/scale = Vector2( 2.6792, 2.73023 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="." to="." method="_on_Projectile_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_Projectile_body_enter"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


